--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
 				<div class="panel-body">
 					<div id="hangman-area">
 						<p id="hangman-prompt"></p>
-						<p id="hangman-word">
-							<span id="letter1"></span>
-							<span id="letter2"></span>
-							<span id="letter3"></span>
-							<span id="letter4"></span>
-							<span id="letter5"></span>
-							<span id="letter6"></span>
-							<span id="letter7"></span>
-						</p>
+						<p id="hangman-word"></p>
 						<p id="hangman-counter">Number of wrong guesses remaining: <span id="hangman-guesses"></span></p>
 						<p id="guess-area">Letters already guessed: <span id="previous-guesses"></span></p>
 						<p>
