--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hangman!</title>
+	<title>Fruit Hangman!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -9,7 +9,7 @@
 	<div class="container-fluid col-sm-10 col-sm-offset-1">
 		<div class="row">
 			<div class="panel panel-default">
-				<h2 class="panel-heading text-center">Hangman!</h2>
+				<h2 class="panel-heading text-center">Fruit Hangman!</h2>
 				<div class="panel-body">
 					<div id="hangman-area">
 						<p id="hangman-prompt"></p>
