thanks for your help keith!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 						<p id="hangman-word"></p>
 						<p id="hangman-counter">Number of wrong guesses remaining: <span id="hangman-guesses"></span></p>
 						<p id="guess-area">Letters already guessed: <span id="previous-guesses"></span></p>
+						<p id="win-counter">Number of wins: <span id="wins"></span></p>
 						<p>
 							<button class="btn btn-default" id="new-word">New Word</button>
 						</p>
