--- a/index.html
+++ b/index.html
@@ -3,31 +3,24 @@
 <head>
 	<title>Fruit Hangman!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="./manish.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-	<div class="container-fluid col-sm-10 col-sm-offset-1">
-		<div class="row">
-			<div class="panel panel-default">
-				<h2 class="panel-heading text-center">Fruit Hangman!</h2>
-				<div class="panel-body">
-					<div id="hangman-area">
-                        <div id="pre-game">
-                            <p>Press any key to get started!</p>
-                        </div>
-                        <div id="during-game" class="hide">
-                            <p>This is your word, try to guess it before you run out of guesses</p>
-    						<p id="hangman-word"></p>
-    						<p id="hangman-counter">Number of wrong guesses remaining: <span id="hangman-guesses"></span></p>
-    						<p id="guess-area">Letters already guessed: <span id="previous-guesses"></span></p>
-    						<p id="win-counter">Number of wins: <span id="wins"></span></p>
-    					    <button class="btn btn-default" id="new-word">New Word</button>
-                        </div>
-					</div>
-				</div>
-			</div>
-		</div>
+	<h2 class="panel-heading text-center">Fruit Hangman!</h2>
+	<div class="panel-body">
+        <div id="intro-screen" class="text-center">
+            <p>Press any key to get started!</p>
+        </div>
+        <div id="game-screen" class="hide">
+			<p id="win-lose-text"></p>
+            <p>This is your word, try to guess it before you run out of guesses</p>
+			<p id="word-in-progress"></p>
+			<p id="guess-counter">Lives: <span id="guesses-remaining"></span></p>
+			<p id="guess-tracker">Letters guessed: <span id="guessed-letters"></span></p>
+			<p id="win-counter">Wins: <span id="wins"></span></p>
+		    <button class="btn btn-default" id="new-word">New Word</button>
+        </div>
 	</div>
-	<script type="text/javascript" src="./manish.js"></script>
+	<script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
 </html>
